--- a/Fundamentals of Software Design & Development/CardGame/nbproject/project.properties
+++ b/Fundamentals of Software Design & Development/CardGame/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=CardGame
-main.class=cardgame.CardGame
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
